@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.0
 
+	- Fl_File_Chooser::value() would return directories with
+	  a trailing slash, but would not accept a directory
+	  without a trailing slash.
 	- When installing shared libraries, FLUID is now linked
 	  against the shared libraries.
 	- MacOS: missing compile rule for .dylib files.
